feat: parse collections, OffsetDateTime serializer to gson